log/build_2024-10-24_14-10-31/control_robot/stderr.log
  File "/home/vboxuser/Desktop/robot/install/control_robot/lib/python3.10/site-packages/control_robot/robot.py", line 91
    msg.linear.x = linear_vel*
                              ^
SyntaxError: invalid syntax

